fixed white space issue

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 *{
   margin:0;
   padding:0;
-
+  box-sizing: border-box;
 }
 
 html, body{
+  position: relative;
    margin:0;
   padding:0;
   height: 100%;
@@ -144,21 +145,20 @@ top: 0%;
 
 
 .nav-icons{
-  float: right;
+  /*float: right;*/
   top: 13px;
-    }
+    
+}
 
    
 .cart {
   position:absolute;
   float: right;
-  right: 0%;
-  margin-right: 0;
+  right: 0;
   background-color: transparent;
   width: 100px;
   height: 50px;
   height: auto;
- 
   .material-icons {
   position:inline-block;
   top: 15px;
@@ -168,9 +168,8 @@ top: 0%;
 
 
   .count {
-    position: absolute;
+   position: initial;
     top: 0;
-    right: 2%;
     z-index: 1;
     font-size: 11px;
     border-radius: 50%;
@@ -189,8 +188,8 @@ top: 0%;
 }
     
 .dropdown{
-  top: 0%;
-  right: 20%;
+  top: 3%;
+  right: 10%;
   display: inline-block;
   position: absolute;
      width: 30px;
